git commit -m 'initial commit'

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <div class="container">
     <div class="section">
         <h1>{{user.fullName}}</h1>
-        <img src="{{Public/images/T.Marutla.jpg}}" alt="{{user.fullName}}" class="responsive-img circle">
+        <img src="Public/images/T.Marutla.jpg" alt="{{user.fullName}}" class="responsive-img circle">
     </div>
 
     <div class="section">
         <h2>Which City?</h2>
         <div class="row">
             <div class="col s12 m6">
-                <img src="{{Public/images/Berlin.jpg}}" alt="{{city.name}}" class="responsive-img">
+                <img src="Public/images/Berlin.jpg" alt="{{city.name}}" class="responsive-img">
             </div>
             <div class="col s12 m6">
                 <p>{{city.description}}</p>
