git commit -m 'initial commit'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="container">
     <div class="section">
         <h1>{{user.fullName}}</h1>
-        <img src="Public/images/T.Marutla.jpg" alt="{{user.fullName}}" class="responsive-img circle">
+        <img src="Public/images/tracymarutla.jpeg" alt="{{user.fullName}}" class="responsive-img circle">
     </div>
 
     <div class="section">
@@ -57,7 +57,7 @@
             {{#each favouriteSubjects}}
             <div class="col s12 m4">
                 <h3>{{this.name}}</h3>
-                <img src="{{this.photo}}" alt="{{this.name}}" class="responsive-img">
+                <img src="{{this.image}}" alt="{{this.name}}" class="responsive-img">
                 <p>{{this.description}}</p>
             </div>
             {{/each}}
