git commit -m 'initial commit'

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             {{#each favouriteSubjects}}
             <div class="col s12 m4">
                 <h3>{{this.name}}</h3>
-                <img src="Public/images/Agile-Testing.avif" alt="{{this.name}}" class="responsive-img">
-                <img src="Public/images/full-stack-web-development.jpg" alt="{{this.name}}" class="responsive-img">
-                <img src="Public/images/4ir.jpg" alt="{{this.name}}" class="responsive-img">
+                <img src="" alt="{{this.name}}" class="responsive-img">
+                <img src="" alt="{{this.name}}" class="responsive-img">
+                <img src="" alt="{{this.name}}" class="responsive-img">
                 <p>{{this.description}}</p>
             </div>
             {{/each}}
