--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             {{#each favouriteSubjects}}
             <div class="col s12 m4">
                 <h3>{{this.name}}</h3>
-                <img src="" alt="{{this.name}}" class="responsive-img">
+                <img src="Public/images/4ir.jpg" alt="{{this.name}}" class="responsive-img">
                 <p>{{this.description}}</p>
             </div>
             {{/each}}
