--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <div class="container">
     <div class="section">
         <h1>Tracy Marutla</h1>
-        <img src="Public/images/tracymarutla.jpeg" width="500" alt="{{user.fullName}}" class="responsive-img circle">
+        <img src="Public/images/tracymarutla.jpeg" width="600" height="600"  alt="{{user.fullName}}" class="responsive-img circle">
     </div>
 
     <div class="section">
         <h2>Which City?</h2>
-        <p>Berlin</p>
+        <p style="font-size: 30px;">Berlin</p>
         <div class="row">
             <div class="col s12 m6">
                 <img src="Public/images/Berlin.jpg" alt="{{city.name}}" class="responsive-img">
